; ModuleID = '/home/carl/AnghaBench/poco/PDF/src/extr_hpdf_fontdef_kr.c_Dotum_Italic_Init.c'
source_filename = "/home/carl/AnghaBench/poco/PDF/src/extr_hpdf_fontdef_kr.c_Dotum_Italic_Init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HPDF_OK = common dso_local global i64 0, align 8
@HPDF_FALSE = common dso_local global i32 0, align 4
@HPDF_TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32)* @Dotum_Italic_Init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @Dotum_Italic_Init(i32 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = call i64 @Dotum_Init(i32 %5)
  store i64 %6, i64* %4, align 8
  %7 = load i64, i64* %4, align 8
  %8 = load i64, i64* @HPDF_OK, align 8
  %9 = icmp ne i64 %7, %8
  br i1 %9, label %10, label %12

10:                                               ; preds = %1
  %11 = load i64, i64* %4, align 8
  store i64 %11, i64* %2, align 8
  br label %17

12:                                               ; preds = %1
  %13 = load i32, i32* %3, align 4
  %14 = load i32, i32* @HPDF_FALSE, align 4
  %15 = load i32, i32* @HPDF_TRUE, align 4
  %16 = call i64 @HPDF_CIDFontDef_ChangeStyle(i32 %13, i32 %14, i32 %15)
  store i64 %16, i64* %2, align 8
  br label %17

17:                                               ; preds = %12, %10
  %18 = load i64, i64* %2, align 8
  ret i64 %18
}

declare dso_local i64 @Dotum_Init(i32) #1

declare dso_local i64 @HPDF_CIDFontDef_ChangeStyle(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
